--- a/pixel_portfolio/index.html
+++ b/pixel_portfolio/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Md Yasin Arafat's portfolio</title>
+<!--Github Calendar script-->
+	<script
+  		src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js">
+	</script>
+	<link
+  		rel="stylesheet"
+  		href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
+	/>
+
 <!--Montserrat font-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
